Added and Edited
Added images in the images folder. Added Gordon Ramsay picture in homescreen.
Added Return to top in recipe pages.
Edited image source to get from images folder.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/gordon.jpg" alt="gordon-ramsay" height="400" width="500">
     <ul>
         <li><a href="recipes/lechon.html">Lechon</a></li>
         <li><a href="recipes/wellington.html">Beef Wellington</a></li>
         <li><a href="recipes/poinsettias.html">Poinsettias</a></li>
     </ul>
-    
 </body>
 </html>
