--- a/recipes/lechon.html
+++ b/recipes/lechon.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes: Lechon</title>
 </head>
 <body>
-    <a href="../index.html">Go Back</a>
+    <a href="../index.html" id="header">Go Back</a>
     <h1>Lechon</h1>
     <img src="../images/Lechon.jpg" alt="Lechon" width="300" height="500">
     
@@ -34,5 +34,7 @@
         <li>Cover, and cook the pork over medium heat until an instant-read thermometer inserted into the thickest part of the pork reaches 160°F and the skin is dark and crisp. This will take approximately 3 hours.</li>
         <li>When the pork is done, remove it from the grill and let it rest for 10 minutes before removing it from the grill. Slice and serve with your favorite sides.</li>
     </ol>
+
+    <a href="#header">Return to top</a>
 </body>
 </html>
