--- a/recipes/poinsettias.html
+++ b/recipes/poinsettias.html
@@ -7,9 +7,9 @@
     <title>Odin Recipes: Poinsettias</title>
 </head>
 <body>
-    <a href="../index.html">Go Back</a>
+    <a href="../index.html" id="header">Go Back</a>
     <h1>Poinsettias</h1>
-    <img src="https://www.allrecipes.com/thmb/n1r4sbJlTIaH5LAIsqouI5wxzLE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1x1-GOLDMAN_ALR0123_Faves_Cocktail_6521-c450aa1daa104bc9b3131976a7166a49.jpg" alt="Poinsettias" width="395" height="500">
+    <img src="../images/poinsettias.webp" alt="Poinsettias" width="395" height="500">
     
     <p>This is a nice holiday cocktail. We always serve this at our Christmas Eve open house. It has such a nice taste!!</p>
 
@@ -24,5 +24,7 @@
         <li>Pour champagne into a champagne flute.</li>
         <li>Top with cranberry juice.</li>
     </ol>
+
+    <a href="#header">Return to top</a>
 </body>
 </html>
