--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -7,9 +7,9 @@
     <title>Odin Recipes: Beef Wellington</title>
 </head>
 <body>
-    <a href="../index.html">Go Back</a>
+    <a href="../index.html" id="header">Go Back</a>
     <h1>Chef John's Individual Beef Wellingtons</h1>
-    <img src="https://www.allrecipes.com/thmb/YpbKar6qnj-43EfU5pk3ksfyFRw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/image-310-46915dae548c47b6910be206e914166a.jpg" alt="Beef-Wellington" width="500" height="300">
+    <img src="../images/wellington.webp" alt="Beef-Wellington" width="500" height="300">
     
     <p> Enjoy these individual beef Wellingtons with no regrets and no second thoughts! Perfectly cooked filet mignon topped with a rich, savory mushroom pate is wrapped in a crispy pastry crust and 
         served on top of a buttery pastry base for a 1-2 punch that's hard to beat. Serve as-is or with a simple, brown pan sauce.</p>
@@ -55,5 +55,7 @@
         <li>Immediately remove from the hot pan and transfer onto a plate or cutting board for at least 5 minutes. Cut Wellingtons in half, then trim each end to create a flat surface.</li>
         <li>Place each rounded pastry base on a plate and stand 2 filet halves on top with center cut facing up. </li>
     </ol>
+
+    <a href="#header">Return to top</a>
 </body>
 </html>
