Edited lechon brief description

--- a/recipes/lechon.html
+++ b/recipes/lechon.html
@@ -12,7 +12,7 @@
     <img src="../images/Lechon.jpg" alt="Lechon" width="300" height="500">
     
     <p>Lechon is pork dish that is really popular in the Philippines. Its main characteristics
-        are the crunchy and the tender juicy meat. Mix it with a little sauce on the side 
+        are the crunchy skin and the tender juicy meat. Mix it with a little sauce on the side 
         and you'll never stop eating it.</p>
 
     <h2>Ingredients:</h2>
